# telegram-bot-aemet

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
app/: Dockerfile  requirements.txt
app/src/: aemet.py  conf_management.py  config_gifs.py  main.py  telegramC.py
kustomize/: deployment.yaml  kustomization.yaml
