[tool.poetry]
name = "telegram-bot-aemet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version = "20.4", extras = ["ext"]}
requests = "2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
